testcrate/ui/not-a-result.stderr
error[E0308]: mismatched types
 --> $DIR/not-a-result.rs:8:13
  |
8 | fn foo() -> u32 {
  |             ^^^ expected enum `std::result::Result`, found u32
  |
  = note: expected type `std::result::Result<_, _>`
             found type `u32`

error[E0308]: mismatched types
 --> $DIR/not-a-result.rs:9:5
  |
9 |     3
  |     ^ expected enum `std::result::Result`, found integral variable
  |
  = note: expected type `std::result::Result<_, _>`
             found type `{integer}`

error[E0277]: the trait bound `u32: futures::__rt::IsResult` is not satisfied
 --> $DIR/not-a-result.rs:8:13
  |
8 | fn foo() -> u32 {
  |             ^^^ async functions must return a `Result` or a typedef of `Result`
  |
  = help: the trait `futures::__rt::IsResult` is not implemented for `u32`
  = note: required because of the requirements on the impl of `futures::__rt::MyFuture<u32>` for `impl futures::__rt::MyFuture<<[generator@$DIR/not-a-result.rs:7:1: 10:2 _] as std::ops::Generator>::Return>`
  = note: the return type of a function must have a statically known size

error[E0277]: the trait bound `u32: futures::__rt::IsResult` is not satisfied
  --> $DIR/not-a-result.rs:13:17
   |
13 |   fn bar() -> u32 {
   |  _________________^
14 | |     3
15 | | }
   | |_^ async functions must return a `Result` or a typedef of `Result`
   |
   = help: the trait `futures::__rt::IsResult` is not implemented for `u32`

error[E0308]: mismatched types
  --> $DIR/not-a-result.rs:13:13
   |
13 | fn bar() -> u32 {
   |             ^^^ expected enum `std::result::Result`, found u32
   |
   = note: expected type `std::result::Result<_, _>`
              found type `u32`

error[E0277]: the trait bound `u32: futures::__rt::IsResult` is not satisfied
  --> $DIR/not-a-result.rs:13:13
   |
13 | fn bar() -> u32 {
   |             ^^^ async functions must return a `Result` or a typedef of `Result`
   |
   = help: the trait `futures::__rt::IsResult` is not implemented for `u32`

error[E0308]: mismatched types
  --> $DIR/not-a-result.rs:14:5
   |
14 |     3
   |     ^ expected enum `std::result::Result`, found integral variable
   |
   = note: expected type `std::result::Result<_, _>`
              found type `{integer}`

error[E0308]: mismatched types
  --> $DIR/not-a-result.rs:18:14
   |
18 | fn foos() -> u32 {
   |              ^^^ expected enum `std::result::Result`, found u32
   |
   = note: expected type `std::result::Result<(), _>`
              found type `u32`

error[E0308]: mismatched types
  --> $DIR/not-a-result.rs:19:5
   |
19 |     3
   |     ^ expected enum `std::result::Result`, found integral variable
   |
   = note: expected type `std::result::Result<(), _>`
              found type `{integer}`

error[E0277]: the trait bound `u32: futures::__rt::IsResult` is not satisfied
  --> $DIR/not-a-result.rs:18:14
   |
18 | fn foos() -> u32 {
   |              ^^^ async functions must return a `Result` or a typedef of `Result`
   |
   = help: the trait `futures::__rt::IsResult` is not implemented for `u32`
   = note: required because of the requirements on the impl of `futures::__rt::MyStream<u32, u32>` for `impl futures::__rt::MyStream<u32, <[generator@$DIR/not-a-result.rs:17:1: 20:2 _] as std::ops::Generator>::Return>`
   = note: the return type of a function must have a statically known size

error[E0277]: the trait bound `u32: futures::__rt::IsResult` is not satisfied
  --> $DIR/not-a-result.rs:23:18
   |
23 |   fn bars() -> u32 {
   |  __________________^
24 | |     3
25 | | }
   | |_^ async functions must return a `Result` or a typedef of `Result`
   |
   = help: the trait `futures::__rt::IsResult` is not implemented for `u32`

error[E0308]: mismatched types
  --> $DIR/not-a-result.rs:23:14
   |
23 | fn bars() -> u32 {
   |              ^^^ expected enum `std::result::Result`, found u32
   |
   = note: expected type `std::result::Result<(), _>`
              found type `u32`

error[E0277]: the trait bound `u32: futures::__rt::IsResult` is not satisfied
  --> $DIR/not-a-result.rs:23:14
   |
23 | fn bars() -> u32 {
   |              ^^^ async functions must return a `Result` or a typedef of `Result`
   |
   = help: the trait `futures::__rt::IsResult` is not implemented for `u32`

error[E0308]: mismatched types
  --> $DIR/not-a-result.rs:24:5
   |
24 |     3
   |     ^ expected enum `std::result::Result`, found integral variable
   |
   = note: expected type `std::result::Result<(), _>`
              found type `{integer}`

error: aborting due to 14 previous errors

